<resources>
    <string name="app_name">Pray Watch</string>

    <string name="assalamu_alaikum">Assalamu Alaikum!</string>
    <string name="skip">Skip</string>
    <string name="first_sub_heading">Pray Watch is a simple, modern prayer app that leverages the latest technologies in an elegant interface.</string>
    <string name="first_bottom_text">First things first, let\'s help you personalize your settings!</string>
    <string name="center_image">Center Image</string>
    <string name="prayer_reminders">Prayer Reminders</string>
    <string name="prayer_reminder_sb_heading">With Pray Watch, you can customize your notification alerts, setup pre-Adhan reminders, and even snooze the alerts for later so you never miss a prayer!</string>
    <string name="get_started">Get Started</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="not_now">Not now</string>
    <string name="third_sc_sub_heading">To calculate the prayer times accurately for your city, we need your location while using the app, Precise location is not required.</string>
    <string name="third_sc_heading">Prayer Times</string>
    <string name="third_sc_bottom_text">Your location data stays on your device. We never collect or store it anywhere else.</string>
    <string name="fourth_sc_sub_heading">Ensure that prayer notifications are scheduled during device maintenance or charging times.</string>
    <string name="fourth_screen_bottom_text">Background App Refresh is enabled</string>
    <string name="next">Next</string>
    <string name="sixth_sc_sub_heading">Pray Watch synchronizes your settings and preferences across all devices in real-time. This is important for Google Watch use. Ensure you are logged into Google Drive and have it enabled.</string>
    <string name="sixth_sc_bottom_text">Google Drive is enabled</string>
    <string name="sub_heading">Successful indeed are the believers; Who are humble in their prayers.\n[Qur\'an, 23:1–2]</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="fifth_sc_sub_heading">Please select the calculation method that best matches your local authority or institution.</string>
    <string name="confirm_calculation">Confirm Calculation</string>
    <string name="enable_location">Enable Location</string>
    <string name="prayer_time">Prayer time!</string>
    <string name="warning_string"><b>Your device does not support compass functionality.</b>\n This means the Qibla direction cannot be determined using your device’s internal sensors. You can still use other features of the app, but to view the Qibla direction accurately, a device with a magnetic compass sensor is required.</string>
    <string name="warning">Warning!</string>
    <string name="monthly">Monthly</string>
    <string name="file_path">android/res/raw/</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="off">Off</string>

    <string-array name="elevation">
        <item>Automatic</item>
        <item>Night Middle</item>
        <item>One/Seventh</item>
        <item>Angle-based</item>

    </string-array>

    <string-array name="iqama_update_interval">
        <item>None</item>
        <item>By weekly</item>
        <item>By monthly</item>
        <item>By yearly</item>

    </string-array>

    <string-array name="jurisprudence">
        <item>Standard</item>
        <item>Hanafi</item>
    </string-array>

    <string-array name="dua">
        <item>Off</item>
        <item>Time</item>
        <item>Minutes</item>
    </string-array>


    <string-array name="methods">
        <item>Islamic Society of N. America (ISNA)</item>//0
        <item>Muslim World League</item>//1
        <item>Moonsighting Committee</item>//2
        <item>Egyptian General Authority of Survey</item> //3
        <item>Algerian Ministry of Awqaf and Religious Affairs</item> //4 //other
        <item>Tunisian Ministry of Religious Affairs</item> //other //5
        <item>London Unified Prayer Timetable</item> //6
        <item>Umm Al-Quran University</item> //7
        <item>Umm Al-Qura University, Makkah</item> //8
        <item>Authority of Dubai - UAE</item> //9
        <item>Authority of Kuwait</item> //10
        <item>Authority of Indonesia, Malaysia, Singapore</item> //11
        <item>Authority of Qatar</item> //12
        <item>Univ. of Islamic Sciences, Karachi</item> //13
        <item>Moroccan Ministry of Awqaf and Islamic Affairs</item> //14
    </string-array>

</resources>