<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.onBoarding.SixthOnboarding">
    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/sf_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/skip"
        android:visibility="invisible"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assalam_o_alekum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/sf_regular"
        android:text="Google Drive Sync"
        android:textColor="@color/yellow_text"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip" />

    <TextView
        android:id="@+id/sub_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/sf_regular"
        android:gravity="center"
        android:letterSpacing=".03"
        android:text="@string/sixth_sc_sub_heading"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assalam_o_alekum" />

    <ImageView
        android:id="@+id/center_image"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:contentDescription="@string/center_image"
        android:src="@drawable/sixth_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_heading" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/sf_regular"
        android:gravity="center"
        android:letterSpacing=".03"
        android:padding="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_check"
        android:text="@string/sixth_sc_bottom_text"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_image" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_enable_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted_empty" />

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted_empty" />

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted_empty" />

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted_empty" />

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted_empty" />

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted" />

        <View
            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/dotted_empty" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enable_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/button_rounded_corners"
        android:gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/not_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/not_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/sf_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/not_now"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_enable_notification"
        app:layout_constraintStart_toStartOf="@id/btn_enable_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>